<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/project_page"
                android:weightSum="1">

<TableLayout
    android:paddingLeft="10dp"
    android:paddingTop="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title_textView"
        android:textStyle="bold"
        android:text="@string/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/description_textView"
        android:textStyle="bold"
        android:layout_below="@+id/title_textView"
        android:text="@string/project_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/project_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/start_date_textView"
        android:textStyle="bold"
        android:text="@string/project_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/project_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/end_date_textView"
        android:textStyle="bold"
        android:text="@string/project_endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/project_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </TableLayout>


<LinearLayout

    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <TextView
    android:id="@+id/milestones_textView"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:gravity="center"
    android:textStyle="bold"
    android:text="@string/milestones"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</LinearLayout>

    <FrameLayout


        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <fragment
            android:layout_width="wrap_content"
            android:layout_height="218dp"
            android:id="@+id/milestone_panel"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:name="com.example.nnguy637.journey.MilestoneListFragment"
        tools:layout="@layout/fragment_milestone_list"
            >
            </fragment>
    </FrameLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/add_milestone_button"
        android:text="@string/add_ms"
        android:layout_gravity="center_horizontal">
    </Button>
    <Button
        android:id="@+id/delete_project_button"
    android:text="@string/delete_project_button"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"/>

</LinearLayout>

